fixed spinner on mobile screens

--- a/styles/spinner.module.css
+++ b/styles/spinner.module.css
@@ -26,4 +26,7 @@
   .main {
     width: 100%;
   }
+  .sidebar {
+    display: none;
+  }
 }
